--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
   "contributors": [],
   "scripts": {
     "dev": "",
-    "test": ""
+    "test": "",
+    "build": "webpack --config webpack.config.js"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
@@ -35,5 +36,9 @@
     "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
